<resources>
    <string name="app_name">运价查询</string>

    <string name="text_login">登录</string>
    <string name="text_exit">退出登录</string>
    <string name="text_password">密码</string>
    <string name="text_register">注册</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="tv_cancel">取消</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="hint_inputpw">请输入密码</string>
    <string name="hint_inputpw2">请再次输入密码</string>
    <string name="tv_agree">我已阅读并同意使用条款和隐私政策</string>
    <string name="tv_emailError">邮箱格式错误</string>
    <string name="tv_checked">请先同意协议和条款</string>
    <string name="tv_tip">已有账号?点击</string>
    <string name="text_rememberPw">记住密码</string>
    <string name="text_forget">忘记密码</string>
    <string name="text_reminder">请输入手机号或密码</string>
    <string name="loading">正在加载…</string>
    <string name="no_location">附近没有其它地点</string>


    <string name="toast_netadvice">网络连接失败，再试试吧~</string>
    <string name="toast_netfail">网络已断开！</string>
    <string name="toast_netsuccess">网络已恢复！</string>
    <string name="text_occupied">该账号已在别处登录，请重新登录。</string>
    <string name="connecction_timeout">连接超时，请稍后重试</string>
    <string name="serverException">服务器异常</string>
    <string name="tv_searchResult">对不起，没有搜索到相关数据！</string>
    <string name="tv_searchErr">搜索失败</string>
    <string name="tv_clickEnter">点击进入</string>

    <!--MainActivity-->
    <string name="tv_start">起运地:</string>
    <string name="tv_end">目的地:</string>
    <string name="tv_chooseTime">发货日期:</string>
    <string name="tv_seacch">查询运价</string>
    <string name="tv_3">3天</string>
    <string name="tv_5">5天</string>
    <string name="tv_7">7天</string>

    <string name="tv_toptitle">找回密码</string>
    <string name="tv_findpwbyphone">手机找回</string>
    <string name="tv_findpwbyemail">邮箱找回</string>
    <string name="tv_submit">提交</string>
    <string name="tv_getCode">获取验证码</string>
    <string name="tv_getAvCode">获取激活码</string>
    <string name="hint_yzm">请输入验证码</string>
    <string name="hint_avcode">请输入激活码</string>
    <string name="tv_confirmModify">确认修改</string>
    <string name="tv_sentCode">验证码已发送</string>
    <string name="toast_codeError">验证码输入错误</string>
    <string name="tv_sentAvCode">激活码已发送</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_null">暂无</string>

    <!--个人资料-->
    <string name="tv_personInfo">个人资料</string>
    <string name="tv_icon">头像</string>
    <string name="tv_phone">手机号</string>
    <string name="tv_email">邮箱</string>
</resources>
